fix overflowing containers on dashboard tablet view

--- a/components/App/shared/ListSection/ListItem.module.scss
+++ b/components/App/shared/ListSection/ListItem.module.scss
@@ -11,8 +11,8 @@
 }
 
 .title {
-	font-weight: 500;
-	color: var(--text300);
+	font-weight: 400;
+	color: var(--text400);
 	white-space: nowrap;
 	text-overflow: ellipsis;
 	overflow: hidden;
