--- a/components/App/shared/PinnedSection/PinnedCard.module.scss
+++ b/components/App/shared/PinnedSection/PinnedCard.module.scss
@@ -22,7 +22,7 @@
 }
 
 .title_container {
-	max-width: calc(24rem - 5.6rem);
+	max-width: 18.4rem;
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
