--- a/components/App/shared/Slider.module.scss
+++ b/components/App/shared/Slider.module.scss
@@ -40,7 +40,7 @@
 	left: 0;
 	background: linear-gradient(
 		to right,
-		var(--background-secondary) 5%,
+		var(--slider-transparency) 5%,
 		rgba(255, 255, 255, 0)
 	);
 	justify-content: flex-start;
@@ -50,7 +50,7 @@
 	right: 0;
 	background: linear-gradient(
 		to left,
-		var(--background-secondary) 5%,
+		var(--slider-transparency) 5%,
 		rgba(255, 255, 255, 0)
 	);
 	justify-content: flex-end;
